@@ -121,6 +121,10 @@ WHERE {
     RETURN_TOKEN(TOK_WHERE);
 }
 
+D_UNION {
+    RETURN_TOKEN(TOK_D_UNION);
+}
+
 UNION {
     RETURN_TOKEN(TOK_UNION);
 }
